[gd_scene load_steps=2 format=3 uid="uid://daly08jb3wbpr"]

[ext_resource type="Script" uid="uid://d2sa12d8ysayn" path="res://Scenes/UI/hud.gd" id="1_sprlj"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_sprlj")

[node name="CountdownTimer" type="Timer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="InteractPrompt" type="Control" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/InteractPrompt"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -78.5
offset_top = -40.0
offset_right = 78.5
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/InteractPrompt/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="InteractLabel" type="Label" parent="MarginContainer/InteractPrompt/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Hold E To Interact"

[node name="CurrentTask" type="Control" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/CurrentTask"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CurrentTask/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="CurrentTaskLabel" type="Label" parent="MarginContainer/CurrentTask/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TasksComplete" type="Control" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/TasksComplete"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -127.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TasksComplete/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TasksCompleteLabel" type="Label" parent="MarginContainer/TasksComplete/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="NextTaskCountdown" type="Control" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/NextTaskCountdown"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.5
offset_right = 52.5
offset_bottom = 40.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/NextTaskCountdown/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="NextCountdownLabel" type="Label" parent="MarginContainer/NextTaskCountdown/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Next Task In: "
